--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{BC0E3227-29DD-48FB-AC8F-E6B43743D661}</ProjectGuid>
     <RootNamespace>Server</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -89,14 +89,14 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Crypto\libcrypto.lib;DataBase\SQLite\sqlite3.lib;DataBase\PostgreSQL\libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Crypto\OpenSSL\libcrypto.lib;DataBase\SQLite\sqlite3.lib;DataBase\PostgreSQL\libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>ROBOCOPY "$(ProjectDir)DataBase" "$(TargetDir)\DataBase" data.db
+      <Command>ROBOCOPY "$(ProjectDir)DataBase" "$(TargetDir)DataBase" data.db
 IF %ERRORLEVEL% LSS 8 goto copydll else exit %ERRORLEVEL%
 
 :copydll
-ROBOCOPY "$(ProjectDir)DLL" "$(TargetDir)." *.dll
+for /d  %%i in ($(ProjectDir)DLL\*) do ROBOCOPY "%%i"  "$(TargetDir)." *.dll
 IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -109,14 +109,14 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Crypto\libcrypto.lib;DataBase\SQLite\sqlite3.lib;DataBase\PostgreSQL\libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Crypto\OpenSSL\libcrypto.lib;DataBase\SQLite\sqlite3.lib;DataBase\PostgreSQL\libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>ROBOCOPY "$(ProjectDir)DataBase" "$(TargetDir)\DataBase" data.db
+      <Command>ROBOCOPY "$(ProjectDir)DataBase" "$(TargetDir)DataBase" data.db
 IF %ERRORLEVEL% LSS 8 goto copydll else exit %ERRORLEVEL%
 
 :copydll
-ROBOCOPY "$(ProjectDir)DLL" "$(TargetDir)." *.dll
+for /d  %%i in ($(ProjectDir)DLL\*) do ROBOCOPY "%%i"  "$(TargetDir)." *.dll
 IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -134,14 +134,14 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>Crypto\libcrypto.lib;DataBase\SQLite\sqlite3.lib;DataBase\PostgreSQL\libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Crypto\OpenSSL\libcrypto.lib;DataBase\SQLite\sqlite3.lib;DataBase\PostgreSQL\libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>ROBOCOPY "$(ProjectDir)DataBase" "$(ProjectDir)Bin\DataBase" /E /PURGE
+      <Command>ROBOCOPY "$(ProjectDir)DataBase" "$(TargetDir)DataBase" data.db
 IF %ERRORLEVEL% LSS 8 goto copydll else exit %ERRORLEVEL%
 
 :copydll
-ROBOCOPY "$(ProjectDir)DLL" "$(TargetDir)\"
+for /d  %%i in ($(ProjectDir)DLL\*) do ROBOCOPY "%%i"  "$(TargetDir)." *.dll
 IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -159,14 +159,14 @@ IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>Crypto\libcrypto.lib;DataBase\SQLite\sqlite3.lib;DataBase\PostgreSQL\libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Crypto\OpenSSL\libcrypto.lib;DataBase\SQLite\sqlite3.lib;DataBase\PostgreSQL\libpq.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>ROBOCOPY "$(ProjectDir)DataBase" "$(ProjectDir)Bin\DataBase" /E /PURGE
+      <Command>ROBOCOPY "$(ProjectDir)DataBase" "$(TargetDir)DataBase" data.db
 IF %ERRORLEVEL% LSS 8 goto copydll else exit %ERRORLEVEL%
 
 :copydll
-ROBOCOPY "$(ProjectDir)DLL" "$(TargetDir)\"
+for /d  %%i in ($(ProjectDir)DLL\*) do ROBOCOPY "%%i"  "$(TargetDir)." *.dll
 IF %ERRORLEVEL% LSS 8 exit 0 else exit %ERRORLEVEL%</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
