--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 # Ignore external libraries from language statistics
 Server/Crypto/OpenSSL/* linguist-vendored
-Server/DataBase/* linguist-vendored
+Server/Database/* linguist-vendored
 
 # Lineendings
 *.sln        eol=crlf
