--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -246,8 +246,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="CardGame.conf">
-      <Filter>Settings</Filter>
-    </None>
+    <CopyFileToFolders Include="CardGame.conf" />
   </ItemGroup>
 </Project>
