--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: bionic
 
 language: cpp
 
@@ -8,7 +8,6 @@ git:
 compiler: g++
 
 before_install:
-  - sudo add-apt-repository ppa:jonathonf/gcc-7.1 -y
   - sudo apt-get update
   - sudo apt-get install libssl-dev
   - sudo apt-get install libpq-dev
