--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>BlueLootBox_19_t.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,6 +41,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="Views\Game\SelectCardsViewModel.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Views\Game\MainMenu.xaml">
       <SubType>Designer</SubType>
     </Page>
