--- a/Client.UI/Client.UI.csproj
+++ b/Client.UI/Client.UI.csproj
@@ -44,7 +44,7 @@
     <Page Update="Views\Game\GamePage.xaml">
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="Views\Game\SelectCardsViewModel.xaml">
+    <Page Update="Views\Game\SelectCards.xaml">
       <SubType>Designer</SubType>
     </Page>
     <Page Update="Views\Game\MainMenu.xaml">
