--- a/Client.Logic/Client.Logic.csproj
+++ b/Client.Logic/Client.Logic.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Arci.Networking" Version="2.0.1" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112.2" />
   </ItemGroup>
 
   <ItemGroup>
